# lab

./: .gitignore  Diagrama sem nome.drawio  Untitled Diagram.drawio  microfrontend.drawio
angularjs/exercise/: Gulpfile.js  package.json
angularjs/exercise/public/: cb.json  index.html
angularjs/exercise/source/: Main.coffee
cpp/: CMakeLists.txt  MotionDetection.cpp  blur.cpp  main.cpp  test.cpp
easel.js/: ContainerTest.coffee  Floating.coffee  Main.coffee  MainBTM.coffee  MainSVG.coffee  MainSVG.js  Workarounds.coffee
easel.js/public/: DragAndDrop.html  index.html
easel.js/public/assets/: items.psd
easel.js/public/js/: Main.js  vendors.js
node.js/: Main.coffee  gulpfile.js  package.json
node.js/public/js/: app.js
octave/ATV-1/: img_func.m
octave/ATV-2/: transf2d.m
parserGIF/: Main.coffee  Parser.coffee  ParserGIF.coffee  ParticleDisplay.coffee
parserGIF/public/: index.html
parserGIF/public/js/: Main.js
pixi.js/: MainAnim.coffee  MainStatic.coffee
pixi.js/public/: index.html
pixi.js/public/assets/: test3.json
processing.js/: Main.coffee
processing.js/public/: index.html
regex/: EventDispatcher.coffee  Main.coffee
regex.js/: Debug.coffee  Main.coffee
regex.js/public/: index.html  oldDuke.txt
regex/public/: USPresident.csv  html.txt  index.html  mapa.json  nameslist.txt  oldDuke.txt
regex/vendors/: vendors.js
tree.js/: MainAnim.coffee  MainStatic.coffee  MainStaticBtm.coffee
tree.js/public/: index.html
wordpress/code-snippets/: index.html
wordpress/wordpress/: wp-config.php
zoom/: nhe.fla  nhe.swf
(+37 files in other folders)
